--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,21 @@
-alembic==1.3.2
-autopep8==1.4.4
-Babel==2.7.0
-Click==7.0
-Flask==1.1.1
-Flask-Migrate==2.5.2
+alembic==1.4.2
+Babel==2.8.0
+click==7.1.1
+Flask==1.1.2
+Flask-Migrate==2.5.3
 Flask-Moment==0.9.0
 Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.2
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
-Jinja2==2.10.3
-Mako==1.1.0
+Jinja2==2.11.2
+Mako==1.1.2
 MarkupSafe==1.1.1
-pep8==1.7.1
-psycopg2-binary==2.8.4
-pycodestyle==2.5.0
+psycopg2-binary==2.8.5
 python-dateutil==2.6.0
 python-editor==1.0.4
 pytz==2019.3
-six==1.13.0
-SQLAlchemy==1.3.12
-Werkzeug==0.16.0
-WTForms==2.2.1
+six==1.14.0
+SQLAlchemy==1.3.16
+Werkzeug==1.0.1
+WTForms==2.3.1
 gunicorn
